# VulkanGuide

./: .gitmodules  CMakeLists.txt  README.md
Note/: Introduction.md  Project Layout.md  Welcome to VulkanGuide.md
assets/: monkey_smooth.mtl
shaders/: default_lit.frag  textured_lit.frag  tri_mesh.vert  tri_mesh.vert.spv  triangle.vert
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
